--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,8 +1,13 @@
 {
   "root": true,
   "parser": "@typescript-eslint/parser",
-  "plugins": ["@typescript-eslint", "@typescript-eslint", "import"],
-  "extends": ["eslint:recommended", "plugin:@typescript-eslint/recommended"],
+  "plugins": ["import", "@typescript-eslint", "@typescript-eslint"],
+  "extends": [
+    "eslint:recommended",
+    "plugin:import/recommended",
+    "plugin:import/typescript",
+    "plugin:@typescript-eslint/recommended"
+  ],
   "env": {
     "browser": false,
     "commonjs": true,
@@ -14,23 +19,13 @@
     "ecmaVersion": 2018,
     "sourceType": "module"
   },
-  "settings": {
-    "import/resolver": {
-      "node": {
-        "extensions": [".js", ".jsx", ".ts", ".tsx", ".json"]
-      }
-    }
-  },
   "rules": {
     "import/no-unresolved": "error",
-    "import/extensions": [".js", ".ts"],
-    "import/resolver": {
-      "node": {
-        "extensions": [".js", ".ts"]
-      }
-    },
-    "no-unused-vars": "error",
-    "no-unused-expressions": "error",
-    "no-unused-labels": "error"
+    "import/extensions": [1, "never", { ".js": "never", ".ts": "never" }]
+  },
+  "settings": {
+    "import/parsers": {
+      "@typescript-eslint/parser": [".ts", ".tsx"]
+    }
   }
 }
